# Trading-App

./: CMakeLists.txt  README.md
Include/: CandleStick.h  MerkelMain.h  OrderBook.h  OrderBookEntry.h  Wallet.h
Include/Auth/: User.h  UserManager.h
Include/Crypto/: Encryption.h
Include/GUI/: CandlestickChart.h  LoginDialog.h  MainWindow.h  OrderWidget.h  TradingWidget.h  WalletWidget.h
data/: 20200317.csv
src/: CSVReader.cpp  CandleStick.cpp  CandlestickChart.cpp  MerkelMain.cpp  OrderBook.cpp  OrderBookEntry.cpp  OrderWidget.cpp  TradingWidget.cpp  Wallet.cpp  WalletWidget.cpp  main.cpp
src/Auth/: User.cpp  UserManager.cpp
src/Crypto/: Encryption.cpp
src/GUI/: LoginDialog.cpp  MainWindow.cpp
